--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,22 @@
+body {
+background-color: gainsboro;
+}
+
 header {
-    font-size: 18px;
-    text-align: center;
+font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+font-size: 20px;
+text-align: left;
 }
 
 h1 {
-    font-size: 12px;
-    text-align: center;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+font-size: 25px;
+text-align: center;
+}
+
+h2 {
+background-color: darkgrey;
+font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+font-size: 18px;
+text-align: center;
 }
