--- a/styles.css
+++ b/styles.css
@@ -1,22 +1,26 @@
 body {
-background-color: gainsboro;
+  font-family: Arial, sans-serif;
+  background-color: lightgrey;
 }
 
-header {
-font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-font-size: 20px;
-text-align: left;
+h1,h2 {
+  text-align: center;
 }
 
-h1 {
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-font-size: 25px;
-text-align: center;
+#manchesterMap {
+  margin: 0 auto;
+  width: 500px;
+  height: 300px;
+  border: 1px solid gray;
 }
 
-h2 {
-background-color: darkgrey;
-font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-font-size: 18px;
-text-align: center;
+#wuhanMap {
+  margin: 0 auto;
+  width: 500px;
+  height: 300px;
+  border: 1px solid gray;
+}
+
+p {
+  background-color: white;
 }
