added additional 3 markers for each map

--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,7 @@ h3 {
   color: blue;
   text-align: center;
 }
-#manchestermarker img, #infomarkerpic1 img, #infomarkerpic2 img, #wuhanmarker img, #infomarkerpic3 img, #infomarkerpic4 img{
+#manchestermarker img, #infomarkerpic1 img, #infomarkerpic2 img, #wuhanmarker img, #infomarkerpic3 img, #infomarkerpic4 img, #infomarkerpic5 img, #infomarkerpic6 img, #infomarkerpic7 img, #infomarkerpic8 img, #infomarkerpic9 img, #infomarkerpic10 img{
   width: 76px;
   height: auto;
 }
