--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,17 @@
 body { 
-  <!-- setting the font and background colour-->
+  /* setting the font and background colour */
   font-family: Arial;
   background-color: lightgrey;
 }
 
 h1,h2 {
-  <!-- text alligned to centre -->
+  /* text alligned to centre */
   text-align: center;
 }
 
 
 #manchesterMap {
-  <!-- setting the width and height of the Manchester map and along side gray border-->
+  /* setting the width and height of the Manchester map and along side gray border */
   margin: 0 auto;
   width: 500px;
   height: 300px;
@@ -19,8 +19,7 @@ h1,h2 {
 }
 
 #wuhanMap {
-  <!-- setting the width and height of the wuhan map and along side gray border-->
-  
+  /*setting the width and height of the wuhan map and along side gray border*/
   margin: 0 auto;
   width: 500px;
   height: 300px;
@@ -28,12 +27,12 @@ h1,h2 {
 }
 
 p {
-  <!-- setting the background to gray-->
+  /*setting the background to gray*/
   background-color: lightgrey;
 }
 
-{
-  <!-- colour set to -->
+h3 {
+  /* colour set to */
   color: blue;
   text-align: center;
 }
