--- a/styles.css
+++ b/styles.css
@@ -32,10 +32,11 @@ p {
 }
 
 h3 {
-  /* colour set to */
+  /* colour set to blue and text aligned to center*/
   color: blue;
   text-align: center;
 }
+/* images width at 76px and height is on auto*/
 #manchestermarker img, #infomarkerpic1 img, #infomarkerpic2 img, #wuhanmarker img, #infomarkerpic3 img, #infomarkerpic4 img, #infomarkerpic5 img, #infomarkerpic6 img, #infomarkerpic7 img, #infomarkerpic8 img, #infomarkerpic9 img, #infomarkerpic10 img{
   width: 76px;
   height: auto;
