changed application to run in node.js
weather.ejs isn't working currently and theres a problem with the config file, also landmarks link dosent work antmore but will be fixed with database implementation

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,7 @@
 
 <head>
   <!--The <head> tag in HTML is used to contain metadata about an HTML document, such as the title, scripts, styles, and other information that is not displayed on the page itself. -->
-  <script src="config.js"></script>
+  <script src="config.json"></script>
       <!-- This is a script tag in HTML that is used to include an external JavaScript file in an HTML document. -->
   <title>Twin Cities: Manchester and Wuhan</title>
     <!-- This is the text that will appear in the browser's title bar or tab when the document is loaded. -->
@@ -22,7 +22,7 @@
     <!-- The <head> tag in HTML is used to contain metadata about an HTML document, such as the title, scripts, styles, and other information that is not displayed on the page itself  -->
 <body onload="initMap()">
   <div class="navbar">
-      <a href="weather.php">Weather</a>
+      <a href="weather.ejs">Weather</a>
   </div>
     <!-- HTML body tag of a web page and specifies that a JavaScript function called initMap() should be called when the web page has finished loading. -->
   <h1>Twin Cities: Manchester and Wuhan</h1>
