fuck node.js what even am i doing

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,7 +22,7 @@
     <!-- The <head> tag in HTML is used to contain metadata about an HTML document, such as the title, scripts, styles, and other information that is not displayed on the page itself  -->
 <body onload="initMap()">
   <div class="navbar">
-      <a href="weather.ejs">Weather</a>
+      <a href="weather.php">Weather</a>
   </div>
     <!-- HTML body tag of a web page and specifies that a JavaScript function called initMap() should be called when the web page has finished loading. -->
   <h1>Twin Cities: Manchester and Wuhan</h1>
